[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = aopy
description = Adaptive Optics in Python
long_description = Adaptive Optics in Python
author = Alex Rudy
author_email = arrudy@ucsc.edu
license = BSD
url = http://astropy.org/
edit_on_github = False
